--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
    -------------------*/
 
 .hero-section {
-    background-color: rgba(255, 144, 14, 0.1);
+    background-color: lightgoldenrodyellow
 }
 
 .upper-section {
@@ -152,17 +152,18 @@
 ------------------------------*/
 
 .img-text-3 {
-    max-width: 900px;
+    max-width: 800px;
     margin: 0 auto;
     place-items: center;
 }
 
 .div-main {
     display: flex;
-    gap: 100px;
+    gap: 70px;
     align-items: center;
 }
-.main-text{
+
+.main-text {
     margin-top: -50px;
 }
 
@@ -182,6 +183,7 @@
     margin-top: 10px;
     font-weight: 400;
     font-size: 12px;
+    color: #727272;
 
 }
 
@@ -203,32 +205,98 @@
     margin-top: 10px;
     font-weight: 400;
     font-size: 12px;
+    color: #727272;
 
 }
 
 
-.img-third img {   
+.img-third img {
     height: 100vh;
     margin-top: 100px;
-    
+
 }
 
 .button-third button {
     padding: 20px 10px;
     background: #FF900E;
     border-radius: 5px;
-    color: #FFFFFF;    
+    color: #FFFFFF;
     font-weight: 700;
     font-size: 30px;
     width: 150px;
     border: 0;
-    transform: translate(0, -80px);
+    transform: translate(0px, -80px);
 
 }
-.button-third span{
+
+.button-third span {
     font-size: 12px;
 }
 
 /* -------------------------
 End of third section  
 ----------------------------*/
+
+.icon-text-4 {
+    max-width: 800px;
+    margin: 40px auto 0;
+}
+
+.icon-text-4 h1,
+p {
+    justify-content: left;
+}
+
+.icon-text-4 h1 {
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.icon-text-4 p {
+    font-weight: 400;
+    font-size: 12px;
+    margin-top: 20px;
+    color: #727272;
+}
+
+.icon-section {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 80px;
+}
+
+.icon-text {
+    border: 2px solid #FF900E;
+    border-radius: 8px;
+    padding: 30px 40px;
+    text-align: center;
+
+}
+
+.icon-text .number {
+    font-weight: 600;
+    color: white;
+    font-size: 30px
+}
+.icon-text .skills{
+    color: white;
+    font-weight: 600;
+}
+/*------------------
+ bonus hover effect
+ ------------------- */
+
+.icon-text:hover {
+    background-color: ;
+    transform: rotate(360deg)
+}
+
+.icon-text {
+    background-color: brown;
+    transition: 1.5s;
+}
+
+/* --------------------------
+End of fourth section 
+-----------------------------*/
+
