--- a/styles/style.css
+++ b/styles/style.css
@@ -333,9 +333,55 @@ p {
 .sponsor-section-image img {
     width: 100px;
     height: 40px;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
 }
+/* made image black and white using w3  */
 
 /* ----------------------
 End of  fifth section 
 -------------------------*/
 
+.bonus-section{
+    max-width: 800px;
+    margin: 120px auto 0;
+}
+.bonus-section h2{
+    font-weight: 700;
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 35px;
+    color: #FF900E;
+}
+.contacts{
+    display: grid;
+    grid-template-columns: repeat(2,2fr);
+    gap: 10px;
+
+}
+.contact{
+    border: 2px solid #FF900E;
+    padding: 15px 20px;
+    border-radius: 8px;
+}
+.contact:hover{
+    background-color: burlywood;
+}
+
+.contact h4{
+    font-weight: 700;
+    font-size: 25px;  
+    text-align: center;
+    color: #FF900E;
+}
+.name{
+    font-weight: 400;
+    font-size: 12px;
+    color: #727272;
+    margin-top: 15px;
+}
+.number-2{
+    font-weight: 500;
+    font-size: 14px;
+    margin: 10px;
+}
