--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
    -------------------*/
 
 .hero-section {
-    background-color: lightgoldenrodyellow
+    background-color: #FFF4E7;
 }
 
 .upper-section {
@@ -100,7 +100,7 @@
 
 .img-second {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 50%); 
     grid-row-gap: 8px;
     grid-column-gap: 5px;
     margin-top: 50px;
@@ -135,6 +135,7 @@
     font-size: 12px;
     color: #727272;
     margin-bottom: 20px;
+    text-align: left;
 }
 
 .second-text button {
@@ -184,6 +185,7 @@
     font-weight: 400;
     font-size: 12px;
     color: #727272;
+    text-align: left;
 
 }
 
@@ -293,7 +295,7 @@ End of third section
 }
 
 .icon-text {
-    transition: 1.5s;
+    transition: 0.5s;
 }
 
 /* --------------------------
@@ -333,55 +335,85 @@ p {
 .sponsor-section-image img {
     width: 100px;
     height: 40px;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    -webkit-filter: grayscale(100%);
+    /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
 }
+
 /* made image black and white using w3  */
 
 /* ----------------------
 End of  fifth section 
 -------------------------*/
 
-.bonus-section{
+.bonus-section {
     max-width: 800px;
     margin: 120px auto 0;
 }
-.bonus-section h2{
+
+.bonus-section h2 {
     font-weight: 700;
     font-size: 35px;
     text-align: center;
     margin-bottom: 35px;
-    color: #FF900E;
+    color: ;
 }
-.contacts{
+
+.contacts {
     display: grid;
-    grid-template-columns: repeat(2,2fr);
+    grid-template-columns: repeat(2, 2fr);
     gap: 10px;
 
 }
-.contact{
+
+.contact {
     border: 2px solid #FF900E;
     padding: 15px 20px;
     border-radius: 8px;
 }
-.contact:hover{
+
+.contact:hover {
     background-color: burlywood;
 }
 
-.contact h4{
+.contact h4 {
     font-weight: 700;
-    font-size: 25px;  
+    font-size: 25px;
     text-align: center;
     color: #FF900E;
 }
-.name{
+
+.name {
     font-weight: 400;
     font-size: 12px;
     color: #727272;
     margin-top: 15px;
 }
-.number-2{
+
+.number-2 {
     font-weight: 500;
     font-size: 14px;
     margin: 10px;
 }
+
+/* -----------------------------
+         End of  last section  
+---------------------------------*/
+
+.fotter {
+    max-width: 1000PX;
+    margin: 70PX auto 20px;
+}
+
+.copyright-text {
+    border: 1px solid;
+    border: 8px;
+    background-color: #FFF4E7;
+    padding: 20px;
+    font-weight: 400;
+    font-size: 12px;
+}
+
+/* ----------------------------------
+             End of All sections 
+----------------------------------------*/
