--- a/styles/style.css
+++ b/styles/style.css
@@ -100,9 +100,9 @@
 
 .img-second {
     display: grid;
-    grid-template-columns: repeat(2, 50%); 
+    grid-template-columns: repeat(2, 50%);
     grid-row-gap: 8px;
-    grid-column-gap: 5px;
+    grid-column-gap: 10px;
     margin-top: 50px;
 
 }
@@ -208,6 +208,7 @@
     font-weight: 400;
     font-size: 12px;
     color: #727272;
+    text-align: left;
 
 }
 
@@ -417,3 +418,138 @@ End of  fifth section
 /* ----------------------------------
              End of All sections 
 ----------------------------------------*/
+
+.hide {
+    display: none;
+}
+
+@media only screen and (max-width: 767px) {
+
+    .upper-section-title {
+        margin-right: 250px;
+        margin-left: 0;
+    }
+
+    .banner-text h1 {
+        text-align: center;
+    }
+
+    .banner-text p {
+        text-align: center;
+        width: 350px;
+
+    }
+
+    .img-banner img {
+        margin: 0px 0px 25px;
+        width: 60vh;
+    }
+
+    .upper-section {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    
+    }
+    
+    .nav-list {
+        flex-direction: column;
+        margin-right: 300px;
+    }
+    
+    .img-second {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+    .second-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+    }
+    
+    .second-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .second-text>p {
+        padding: 0 50px;
+        text-align: justify;
+        font-size: 16px;
+    }
+    
+    .img-second>img {
+        width: 300px;
+    }
+    
+    .second-text>h2 {
+        font-size: 50px;
+        text-align: center;
+    }
+    
+    .main-text {
+        text-align: center;
+    }
+    
+    .text-1>p {
+        text-align: center;
+    }
+    
+    .div-main {
+        flex-direction: column;
+    }
+    .text-3{
+        margin-left: 30px;
+    }   
+    .img-third img {
+        width: 120vw;
+        height: 100%;
+        margin-top: 50px;
+    
+    }
+    
+    .button-third button {
+        transform: translate(60px, -120px);
+    }
+    
+    .icon-section {
+        flex-direction: column;
+    
+    }
+    
+    .icon-text {
+        border: 2px solid #FF900E;
+        border-radius: 8px;
+        padding: 30px 20px 30px 20px;
+        margin-left: 15px;
+    
+    }
+    
+    
+    .section-4-upper h1,
+    p {
+        margin-left: 20px;
+    }
+    
+    .sponsor-section-image {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 20px;
+    }
+    .contacts{
+        margin-left: 10px;
+    }
+    
+    .contact {
+        padding: 15px 18px;
+        text-align: center;
+        justify-content: center;
+    }
+
+}
+
+/* ----------------------------
+     small device modification 
+-------------------------------*/
