--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,10 @@
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
+*.main-container{
+    overflow-x: hidden;
 
+}
 /* ------------------
     universal section 
    -------------------*/
@@ -419,15 +422,16 @@ End of  fifth section
              End of All sections 
 ----------------------------------------*/
 
-.hide {
-    display: none;
-}
+
 
 @media only screen and (max-width: 767px) {
 
     .upper-section-title {
         margin-right: 250px;
         margin-left: 0;
+    }
+    .main-container {
+        overflow-x: hidden;
     }
 
     .banner-text h1 {
@@ -442,7 +446,7 @@ End of  fifth section
 
     .img-banner img {
         margin: 0px 0px 25px;
-        width: 60vh;
+        width: 48vh;
     }
 
     .upper-section {
